Bizfi Production/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Authorize_Run_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>By checking this box, you are confirming that you have received authorization to obtain a credit report for this individual.</inlineHelpText>
        <label>Authorize Run Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthdate_for_Workflow__c</fullName>
        <label>Birthdate for Workflow</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Main_Phone__c</fullName>
        <label>Owner Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Phones__c</fullName>
        <description>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Business_Main_Phone__c + &quot;;&quot; + Phone + &quot;;&quot; + Fax + &quot;;&quot; + AssistantPhone + &quot;;&quot; + HomePhone + &quot;;&quot; + MobilePhone + &quot;;&quot; + OtherPhone + &quot;;&quot; 
, &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Business_Main_Phone__c + &quot;;&quot; + MobilePhone + &quot;;&quot; , &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phones</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Range__c</fullName>
        <formula>IF ( Credit_Score__c &gt; 699, &quot;700+&quot;, 
IF ( Credit_Score__c &gt; 649, &quot;650-699&quot;, 
IF ( Credit_Score__c &gt; 599, &quot;600-649&quot;, 
IF ( Credit_Score__c &gt; 549, &quot;550-599&quot;,
IF ( Credit_Score__c &gt; 499, &quot;500-549&quot;,
IF ( Credit_Score__c &gt; 0, &quot;Less than 500&quot;,
&quot;Unknown&quot; ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Score Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Address_City_for_Workflow__c</fullName>
        <label>Home Address City for Workflow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_State_for_Workflow__c</fullName>
        <label>Home Address State for Workflow</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_Zip_for_Workflow__c</fullName>
        <label>Home Address Zip for Workflow</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_for_Workflow__c</fullName>
        <label>Home Address for Workflow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Address__c</fullName>
        <label>ID Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Alert_List__c</fullName>
        <label>ID Alert List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_DOB__c</fullName>
        <label>ID DOB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Email__c</fullName>
        <label>ID Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_General__c</fullName>
        <label>ID General</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Geotrace__c</fullName>
        <label>ID Geotrace</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_PA__c</fullName>
        <label>ID PA</label>
        <picklist>
            <picklistValues>
                <fullName>DOB Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOB Does Not Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOB Not Available</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Pass_Fail__c</fullName>
        <label>ID Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Found</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Phone__c</fullName>
        <label>ID Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_SSN__c</fullName>
        <label>ID SSN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Score__c</fullName>
        <label>ID Score</label>
        <picklist>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Risk</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Combination_Key_For_Owner__c</fullName>
        <label>Combination Key For Owner</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>McaApp__Contact_Roles__c</fullName>
        <label>Contact Roles</label>
        <picklist>
            <picklistValues>
                <fullName>Business Owner</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Drivers_License__c</fullName>
        <label>Drivers License #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Image_del__c</fullName>
        <label>Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>McaApp__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Of_Ownership__c</fullName>
        <label>% Of Ownership</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Social_Security_Number1__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Social_Security_Number__c</fullName>
        <description>xxx-xx-xxxx</description>
        <inlineHelpText>xxx-xx-xxxx</inlineHelpText>
        <label>@Deprecated Social Security Number</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old_Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadScoring__Campaign_Score__c</fullName>
        <description>Value from the converted lead</description>
        <label>Campaign Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadScoring__Lead_Score__c</fullName>
        <description>Value from the converted lead</description>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadScoring__Total_Lead_Score__c</fullName>
        <description>Value from the converted lead</description>
        <formula>leadScoring__Lead_Score__c + leadScoring__Campaign_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this contact.

Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Contactability Score was last updated</description>
        <label>NeuralView: Contactability Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The InsideSales.com NeuralView Hourly Contactability Score Object Lookup</description>
        <label>NeuralView: Hourly Contactability ID</label>
        <referenceTo>qbdialer__ContactScore__c</referenceTo>
        <relationshipLabel>Contact Score Items_C</relationshipLabel>
        <relationshipName>Contact_Score_Items_C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Contactability Score</description>
        <label>NeuralView: Contactability Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZoneSidKey__c</fullName>
        <description>This field will store the TimeZoneSidKey for the Contact.</description>
        <label>TimeZone Sid Key</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>Contacts History</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Format_Assistant_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( $User.ProfileId = &apos;00eo0000000f8OO&apos;, $User.ProfileId = &apos;00eo000000120i0&apos;)) 

&amp;&amp; 

NOT( 
OR(ISBLANK(AssistantPhone), REGEX(AssistantPhone, &quot;^(\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;)))</errorConditionFormula>
        <errorDisplayField>AssistantPhone</errorDisplayField>
        <errorMessage>Assistant phone number should have at least 10 digits or be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Home_Phone_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( $User.ProfileId = &apos;00eo0000000f8OO&apos;, $User.ProfileId = &apos;00eo000000120i0&apos;)) 

&amp;&amp; 

NOT( 
OR(ISBLANK(HomePhone), REGEX(HomePhone, &quot;^(\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;)))</errorConditionFormula>
        <errorDisplayField>HomePhone</errorDisplayField>
        <errorMessage>Home phone number should have at least 10 digits or be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Mobile_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( $User.ProfileId = &apos;00eo0000000f8OO&apos;, $User.ProfileId = &apos;00eo000000120i0&apos;)) 

&amp;&amp; 

NOT( 
OR(ISBLANK(MobilePhone), REGEX(MobilePhone, &quot;^(\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;)))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile phone should have at least 10 digits or be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Other_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( $User.ProfileId = &apos;00eo0000000f8OO&apos;, $User.ProfileId = &apos;00eo000000120i0&apos;)) 

&amp;&amp; 

NOT( 
OR(ISBLANK(OtherPhone), REGEX(OtherPhone, &quot;^(\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;)))</errorConditionFormula>
        <errorDisplayField>OtherPhone</errorDisplayField>
        <errorMessage>Other phone number should have at least 10 digits or be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Owner_Direct_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( $User.ProfileId = &apos;00eo0000000f8OO&apos;, $User.ProfileId = &apos;00eo000000120i0&apos;)) 

&amp;&amp; 

NOT( 
OR(ISBLANK(Business_Main_Phone__c), REGEX(Business_Main_Phone__c, &quot;^(\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;)))</errorConditionFormula>
        <errorDisplayField>Business_Main_Phone__c</errorDisplayField>
        <errorMessage>Owner direct phone number should have at least 10 digits or be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Phone_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( $User.ProfileId = &apos;00eo0000000f8OO&apos;, $User.ProfileId = &apos;00eo000000120i0&apos;)) 

&amp;&amp; 

NOT( 
OR(ISBLANK(Phone), REGEX(Phone, &quot;^(\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;)))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone number should have at least 10 digits or be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>McaApp__Verify_SSN_in_Correct_Format</fullName>
        <active>true</active>
        <description>Enforces that the Social Security Number is inputted in the proper format.</description>
        <errorConditionFormula>AND( 
LEN( McaApp__Social_Security_Number1__c )&gt;0, 
NOT(REGEX( McaApp__Social_Security_Number1__c ,&quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>McaApp__Social_Security_Number1__c</errorDisplayField>
        <errorMessage>Please enter the Social Security Number in the format of XXX-XX-XXXX.</errorMessage>
    </validationRules>
</CustomObject>